# saw-script

./: .gitignore  .gitmodules  saw.cabal
cryptol-saw-core/saw/: Cryptol.sawcore
cryptol-saw-core/src/CryptolSAWCore/: CryptolEnv.hs
doc/: llvm-21-22-bitcode-changes.md
doc/developer/: async-trait-support.md  behavioral-subtyping.md  bounded-collection-verification.md  exception-spec-commands-design.md  parametric-verification-research.md  poll-override-matching-design.md  serde-json-override-strategy.md  sret-struct-store-fix.md  subclass-enumeration.md
doc/rust-verification-with-saw/: async-rust-verification.md
examples/cpp-crypto-overrides/: CryptoSpecs.cry  README.md  crypto_overrides.saw
examples/cpp-string-model/: AuthenticateSpec.cry  ChronoModel.cry  HeapModel.cry  README.md  StringModel.cry  StringOps.cry  authenticate_verify.saw  chrono_overrides.saw  heap_overrides.saw  sret_helpers.saw  sret_overrides.saw  string_ops_overrides.saw  string_overrides.saw  subclass_verify.saw
examples/llvm/cpp-devirt/: Makefile  README.md  (+3 more)
intTests/: disabled_tests.txt
intTests/test_mir_async_basic/: test.rs  test.saw  test.sh
intTests/test_mir_async_comprehensive/: test.rs  test.saw
intTests/test_timeout/: test.saw
intTests/test_vtable_dispatch/: README.md  test.bc  test.saw  test.sh
intTests/test_vtable_slots/: Makefile  example.cpp  test.saw
lib/: StringModel.cry  mir_time_stubs.saw  msvc_string_content_model.saw  polymorphic_verify.saw
saw-tools/: README.md
saw-tools/strip-nuw/: CMakeLists.txt  README.md  StripNuwPass.cpp  StripNuwPass.h  main.cpp
(+23 files in other folders)
